<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="227dp"
        android:layout_marginTop="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reg" />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="292dp"
        android:layout_height="49dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/et_userName"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_Phone"
        android:layout_width="292dp"
        android:layout_height="49dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/et_Phone"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="292dp"
        android:layout_height="49dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/et_Email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Phone" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="292dp"
        android:layout_height="49dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/et_Password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginTop="14dp"
        android:text="@string/btn_register"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="@color/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="207dp"
        android:layout_height="34dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_login"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>