<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcg1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="133dp"
        android:layout_height="63dp"
        android:layout_marginTop="280dp"
        android:text="@string/btn_signup"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#F1D620"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="133dp"
        android:layout_height="63dp"
        android:layout_marginTop="2dp"
        android:text="@string/btn_signin"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#F1D620"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainpage" />

    <TextView
        android:id="@+id/tv_mainpage"
        android:layout_width="213dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_mainpage"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
        android:id="@+id/admintextview"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginBottom="12dp"
        android:text="Admin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>